v0.0a0.09 +fix bag with scrollbar

--- a/iec61850_Client/Configurator/view/css/style.css
+++ b/iec61850_Client/Configurator/view/css/style.css
@@ -66,16 +66,13 @@ body {
 
 .sidebars {
     width: auto;
+    height: -webkit-fill-available;
     padding: 3px 5px;
-    z-index: 10;
     position: relative;
-    margin: 0 20px;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    overflow-x: visible;
-    overflow-y: auto;
-    -ms-overflow-style: none;
+    top: auto;
+    left: auto;
+    bottom: auto;
+    overflow: auto
 }
 
 .menu_right {
@@ -143,6 +140,19 @@ body {
     padding: 0;
     width: 32px;
     height: 32px;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #9f9f9f;
+    cursor: auto;
+    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
+    transition: all .3s ease-in-out;
+}
+
+.button_config{
+    padding: 0;
+    width: 16px;
+    height: 16px;
     background: transparent;
     border: none;
     outline: none;
@@ -254,6 +264,14 @@ ht {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+select{
+    font-family: Consolas, sans-serif;
+    font-size: 9pt;
+    margin: 1px;
+    border: 0.25px solid #ebebeb;
+    max-width: 75px;
 }
 
 .slide-transition {
